# android-graphics-full

./: .gitattributes  .gitignore  LICENSE  README.md  settings.gradle
app/: CMakeLists.txt  build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: gl_code.cpp  native-lib.cpp
app/src/main/java/com/alex/graphics/: CanvasView.kt  IndexActivity.kt  MainActivity.kt  OpenCVActivity.kt  Util.kt
app/src/main/java/com/alex/graphics/activity/: BallActivity.kt  CanvasActivity.kt  CustomActivity.kt  SDKIntersectionActivity.kt
app/src/main/java/com/alex/graphics/gl/: SDKGLRenderer.kt  SDKGLSurfaceView.kt  Square.kt  Star.kt
app/src/main/java/com/alex/graphics/gl/native/: GLJNIActivity.kt  GLJNILib.kt  GLJNIView.kt
app/src/main/java/com/example/myapplication/: BallActivity.kt  CanvasActivity.kt  MainActivity.kt
app/src/main/res/layout/: activity_ball.xml  activity_canvas.xml  activity_custom.xml  activity_index.xml  activity_main.xml  activity_open_cv.xml  activity_sdkintersection.xml  content_custom.xml  content_sdkintersection.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
applelogo/: build.gradle
applelogo/src/main/: AndroidManifest.xml
applelogo/src/main/java/com/alex/applelogo/: AppleLogo.kt
applelogo/src/main/res/drawable/: ic_apple_logo.xml
applelogo/src/main/res/layout/: sample_apple_logo.xml
applelogo/src/main/res/values/: attrs_apple_logo.xml  colors.xml  strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
